Fixed alignments

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -223,8 +223,7 @@ hr.media-line{
 }
 
 .section-btn-clear{
-  width: 250px;
-  height: 50px;
+  height: 70px;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -234,6 +233,11 @@ hr.media-line{
   border-radius: 36px;
   border: solid var(--fedsim-blue1) 5px;
   cursor: pointer;
+}
+
+.doubleLines{
+  padding-top: 16px!important;
+  padding-bottom: 16px!important;
 }
 
 .section-btn-clear:hover{
